--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "jose": "^5.9.6",
     "lucide-react": "^0.469.0",
