--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "jose": "^5.9.6",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.473.0",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
