--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "antd": "^5.23.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "jose": "^5.9.6",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.54.2",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.1",
+    "react-select": "^5.10.0",
     "uuid": "^11.0.3",
     "zod": "^3.24.1"
   },
