--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.1",
     "react-select": "^5.10.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "uuid": "^11.0.3",
     "zod": "^3.24.1"
   },
