--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "jose": "^5.9.6",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.473.0",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.5",
     "react-select": "^5.10.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "uuid": "^11.0.3",
@@ -31,6 +34,8 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/luxon": "^3.4.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
