--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.23.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "framer-motion": "^12.4.7",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.473.0",
